# our_go2

./: .gitmodules  CMakeLists.txt  README.md
example/high_level/: follow_sin.cpp  sportmode_test.cpp
example_py/high_level/: follow_sin.py
python_wrapper/: CMakeLists.txt  python_interface.cpp
redball/: dog2.py  dog2_multi.py  dog3.py  main.py  main_multi.py  multi.py  openaiapikey.txt  streaming.py
